# 23-alsa-v4l2

./: README.md
alsa/alsa_play/: AudioRender.cpp  AudioRender.h  CMakeLists.txt  alsa_play.pro
alsa/alsa_record/: AACEncoder.cpp  AACEncoder.h  AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  RingBuffer.h  alsa_record.pro  main.cpp
alsa/alsa_record/third_lib/alsa/lib/: libasound.la
alsa/alsa_record/third_lib/alsa/lib/pkgconfig/: alsa.pc
alsa/alsa_record/third_lib/fdk-aac/lib/: libfdk-aac.la
alsa/alsa_record/third_lib/fdk-aac/lib/pkgconfig/: fdk-aac.pc
v4l2/v4l2_sdl2/: CMakeLists.txt  main.cpp  v4l2.c  v4l2.h  v4l2_sdl2.pro  v4l2sdl2
v4l2/v4l2_sdl2/third_lib/sdl2/include/SDL2/: SDL_config.h
v4l2/v4l2_sdl2/third_lib/sdl2/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
v4l2/v4l2_sdl2/third_lib/sdl2/lib/cmake/SDL2/: sdl2-config.cmake
v4l2/v4l2_sdl2/third_lib/sdl2/lib/pkgconfig/: sdl2.pc
